testsuite/tests/properties/invalid_block_expr/extra_expr/test.lkt
from common import FooNode

class Example: FooNode {
    @exported fun p(): Bool = {
        val _ = 1;
        false
        val _ = 2;
        true
    }
}
